<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AjouterDepartement">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ajoutFor"
        android:textColor="@color/isep_marron_foncée"
        android:textSize="@dimen/dim30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim50"
        android:orientation="vertical"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/numProTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_dept"
            android:textSize="@dimen/dim20"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="98dp" />

        <EditText
            android:id="@+id/id_code_departement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_carre"
            android:layout_marginTop="@dimen/dimMar"
            app:layout_constraintTop_toBottomOf="@+id/numProTextView"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="35dp" />

        <TextView
            android:id="@+id/id_anneDTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_nom"
            android:layout_marginTop="@dimen/dim10"
            android:textSize="@dimen/dim20"
            tools:ignore="DuplicateIds,MissingConstraints"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="98dp" />

        <EditText
            android:id="@+id/id_nom_departement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimMar"
            android:background="@drawable/border_carre"
            app:layout_constraintTop_toBottomOf="@+id/id_anneDTextView"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="35dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim20"
            android:orientation="horizontal">

            <Button
                android:id="@+id/id_enregistrer_departement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dim10"
                android:text="@string/button_save" />

            <Button
                android:id="@+id/id_annuler_departement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dim10"
                android:text="@string/button_exit" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>