<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AjouterApprenant">

    <ScrollView
        android:id="@+id/scrollable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/max"
            app:layout_constraintEnd_toEndOf="@id/scrollable"
            app:layout_constraintStart_toStartOf="@id/scrollable"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ajoutApp"
                android:textColor="@color/isep_marron_foncée"
                android:textSize="@dimen/dim30"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@drawable/border"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/numProTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_matricule"
                    android:textColor="@color/isep_marron_foncée"
                    android:textSize="@dimen/dim20"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="43dp"
                    tools:layout_editor_absoluteY="98dp" />

                <EditText
                    android:id="@+id/id_matriculeApp_editext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimMar"
                    android:background="@drawable/border_carre"
                    android:inputType="number"
                    app:layout_constraintTop_toBottomOf="@+id/numProTextView"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="35dp" />

                <TextView
                    android:id="@+id/id_anneDTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim10"
                    android:text="@string/label_nom"
                    android:textColor="@color/isep_marron_foncée"
                    android:textSize="@dimen/dim20"
                    tools:ignore="DuplicateIds,MissingConstraints"
                    tools:layout_editor_absoluteX="43dp"
                    tools:layout_editor_absoluteY="98dp" />

                <EditText
                    android:id="@+id/id_nomApp_Edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimMar"
                    android:background="@drawable/border_carre"
                    app:layout_constraintTop_toBottomOf="@+id/id_anneDTextView"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="35dp" />

                <TextView
                    android:id="@+id/id_anneeFin_TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim10"
                    android:text="@string/label_prenom"
                    android:textColor="@color/isep_marron_foncée"
                    android:textSize="@dimen/dim20"
                    tools:ignore="DuplicateIds,MissingConstraints"
                    tools:layout_editor_absoluteX="43dp"
                    tools:layout_editor_absoluteY="98dp" />

                <EditText
                    android:id="@+id/id_prenomApp_Edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimMar"
                    android:background="@drawable/border_carre"
                    app:layout_constraintTop_toBottomOf="@+id/id_anneeFin_TextView"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="35dp" />

                <TextView
                    android:id="@+id/textView_adr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim10"
                    android:text="@string/label_adresse"
                    android:textColor="@color/isep_marron_foncée"
                    android:textSize="@dimen/dim20"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="43dp"
                    tools:layout_editor_absoluteY="98dp" />

                <EditText
                    android:id="@+id/id_adresseApp_editext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimMar"
                    android:background="@drawable/border_carre"
                    app:layout_constraintTop_toBottomOf="@+id/textView_adr"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="35dp" />

                <TextView
                    android:id="@+id/id_anneDTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim10"
                    android:text="@string/date_naissanec"
                    android:textColor="@color/isep_marron_foncée"
                    android:textSize="@dimen/dim20"
                    tools:ignore="DuplicateIds,MissingConstraints"
                    tools:layout_editor_absoluteX="43dp"
                    tools:layout_editor_absoluteY="98dp" />

                <EditText
                    android:id="@+id/id_dateNaiss_Edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimMar"
                    android:background="@drawable/border_carre"
                    app:layout_constraintTop_toBottomOf="@+id/id_anneDTextView"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="35dp" />

                <TextView
                    android:id="@+id/id_anneeFin_TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim10"
                    android:text="@string/label_promo"
                    android:textColor="@color/isep_marron_foncée"
                    android:textSize="@dimen/dim20"
                    tools:ignore="DuplicateIds,MissingConstraints"
                    tools:layout_editor_absoluteX="43dp"
                    tools:layout_editor_absoluteY="98dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_carre">
                <Spinner
                    android:id="@+id/id_promotion_Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimMar"
                    app:layout_constraintTop_toBottomOf="@+id/id_anneeFin_TextView"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="35dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/id_anneeFin_TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim10"
                    android:text="@string/label_dept"
                    android:textColor="@color/isep_marron_foncée"
                    android:textSize="@dimen/dim20"
                    tools:ignore="DuplicateIds,MissingConstraints"
                    tools:layout_editor_absoluteX="43dp"
                    tools:layout_editor_absoluteY="98dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_carre">
                <Spinner
                    android:id="@+id/id_departement_Edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimMar"
                    app:layout_constraintTop_toBottomOf="@+id/id_anneeFin_TextView"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="35dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim20"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/id_enregistrer_apprenant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dim10"
                        android:text="@string/button_save" />

                    <Button
                        android:id="@+id/id_annuler_apprenant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dim10"
                        android:text="@string/button_exit" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>